fix: rename artifact zip files for each service to not conflict with each others

--- a/services/role/serverless.yml
+++ b/services/role/serverless.yml
@@ -1,7 +1,7 @@
 role:
   handler: bootstrap
   package:
-    artifact: bin/role/bootstrap.zip
+    artifact: bin/role/bootstrap_role.zip
   events:
     - http:
         path: /role
